Add /users/{userId} endpoint and update files. Add locales files
